--- a/simplilearn/ES5_JS/welcomepage.html
+++ b/simplilearn/ES5_JS/welcomepage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,5 +12,27 @@
         document.write("<p>welcome</p>")
         document.write("<font color = 'red'>WELCOME</font>")
     </script>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Multiplication Table</title>
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        let baseNumber = 7; // Change this number as needed
+        let result = `<table border="1"><tr><th>Multiplication Table for ${baseNumber}</th></tr>`;
+        for (let i = 1; i <= 10; i++) {
+            result += `<tr><td>${baseNumber} x ${i} = ${baseNumber * i}</td></tr>`;
+        }
+        result += "</table>";
+        document.body.innerHTML = result;
+    });
+    </script>
+</head>
+<body>
 </body>
 </html>
