--- a/simplilearn/DOM using External file/index.html
+++ b/simplilearn/DOM using External file/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/CSS" href="dom.css">
 </head>
 <body>
     <!-- <h2>DOM Operations 1</h2>
@@ -11,7 +12,9 @@
     <h2>DOM Operations 3</h2>
     <h2>DOM Operations 4</h2> -->
     Name: <input type="text" id="fname"/><br/>
-    Age: <input type="text" id="age"><br/>
+    <br>
+    Age: <input type="  text" id="age"><br/>
+    <br>
     <input type="button" value="Add Data" onclick="displayDomData()"/>
 </body>
     <!-- <script type="text/javascript" src="demo.js"></script> -->
