--- a/simplilearn/JS User Defined Objects/index.html
+++ b/simplilearn/JS User Defined Objects/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- <script type="text/JavaScript" src="literalstyle.js"></script> -->
-    <script type="text/JavaScript" src="functionstyle.js"></script>
+    <!-- <script type="text/JavaScript" src="functionstyle.js"></script> -->
+    <script type="text/JavaScript" src="ClassStyle.js"></script>
 </body>
 </html>
